# src/main/kotlin/com/hrblizz/fileapi/controller/model/GetMetasRequest.kt
@@ -1,0 +1,8 @@
+package com.hrblizz.fileapi.controller.model
+
+import javax.validation.constraints.NotEmpty
+
+data class GetMetasRequest(
+    @field:NotEmpty
+    val tokens: Collection<String>
+)
